# bioinformatics

./: CMakeLists.txt  Doxyfile  license  readme.md
benchmarks/: benchmark_findstr.cpp
include/: alignstr.hpp  findstr.hpp  tables.hpp
src/: alignstr.cpp  findstr.cpp
tests/: main.cpp  test_alignstr.cpp  test_findstr.cpp
